openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-els
spec:
  selector:
    app: demo-els
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
