openshift/route.yaml
apiVersion: v1
kind: Route
metadata:
  labels:
    app: demo-els
  name: demo-els
spec:
  host: demo-els.192.168.99.100.nip.io
  port:
    targetPort: 8080
  to:
    kind: Service
    name: demo-els
    weight: 100
